# tseitin-transformation

./: .dockerignore  CMakeLists.txt  Dockerfile
grammar/: Logic.g4
grammar/.antlr/: Logic.interp  Logic.tokens  LogicLexer.interp  LogicLexer.java  LogicParser.java
src/: ASTBuilder.cpp  ASTBuilder.h  ASTNode.h  ASTUtils.cpp  ASTUtils.h  main.cpp
static/: index.html
